# dental-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
dental_detector/: __init__.py  cli.py  detector.py  models.py  utils.py  visualization.py
tests/: test_detector.py
